ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  #replacePathRegex:
  #  regex: ^/(?:[^/]+)/(.*)
  #  replacement: /$1
  stripPrefix:
    prefixes:
      - /v1
      - /baz
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # traefik.ingress.kubernetes.io/rewrite-target: /v1
    # traefik.ingress.kubernetes.io/app-root: "/test.html"
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix@kubernetescrd
    # kubernetes.io/ingress.class: traefik
    # nginx.ingress.kubernetes.io/app-root: /test.html ##当访问域名是直接访问此页面
spec:
  rules:
  - host: test.k8s.com
    http:
      paths:
      - path: /v1 # 该配置表示将dev.xxx.com的请求转发到serviceName为nginx，servicePort为80的服务
        pathType: Prefix
        backend:
          service: 
            name: nginx 
            port:
              number: 80
